# light-client-whitelabel

./: .gitignore  Cargo.toml  Dockerfile.release  README.md  entrypoint.sh
.github/workflows/: releaser.yml
src/: cli.rs  config.rs  main.rs  utils.rs
