[package]
name = "light-client-whitelabel"
version = "1.12.0"
edition = "2021"
description = "Avail Whitelabel Light Client"

[dependencies]
avail-light-core = { git = "https://github.com/availproject/avail-light.git", tag = "avail-light-core-v1.0.2" }
avail-rust = { git = "https://github.com/availproject/avail.git", branch = "main" }

better-panic = "0.3.0"
clap = { version = "4.4.4", features = ["derive", "cargo"] }
color-eyre = "0.6.2"
confy = "0.4.0"
hex = "0.4.3"
libp2p = { version = "0.54", features = ["kad", "identify", "ping", "mdns", "autonat", "relay", "dcutr", "upnp", "noise", "yamux", "dns", "metrics", "tokio", "macros", "tcp", "quic", "serde", "websocket"] }
serde = { version = "1.0", features = ["derive"] }
sp-core = { version = "28.0.0", features = ["serde"] }
strip-ansi-escapes = "0.2.0"
tokio = { version = "1.35", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.17", features = ["json", "env-filter"] }
uuid = { version = "1.3.4", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"

[dev-dependencies]
hex-literal = "0.4.0"
proptest = "1.0.0"
test-case = "3.2.1"

[features]
network-analysis = ["avail-light-core/network-analysis"]
rocksdb = ["avail-light-core/rocksdb"]
default = ["rocksdb"]

[profile.release]
incremental = false

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1